# scientific-api

./: .env.example  .gitignore  .vercelignore  .vercelignore.txt  AZURE_DEPLOYMENT.md  CHANGES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEV_LOG.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile.azure  Dockerfile.azure.db  ENVIRONMENT_STATUS_REPORT.md  FEATURES.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_SETUP_GUIDE.md  GITHUB_SECRETS_SETUP.md  MainDataSetsManager.ipynb  New steps.md  PIPELINE_STRUCTURE.md  PRODUCTION_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PRODUCTION_READINESS_FINAL.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TECHNICAL_PLAN.md  Vercel_project_scientific_api_logs.json  action.yaml  azure-deployment-updated.json  azure-deployment-with-db.json  azure-webapp-bicep.bicep  azure-webapp-config.json  azure.env  build_lightweight.sh  (+47 more)
.devcontainer/: devcontainer.json  postCreate.sh
api/: __init__.py  ads_api.py  astro_catalog_api.py  backup_app.py  config.py  cosmos_db_config.py  data_analysis.py  data_cleaning.py  data_management.py  dataset_api.py  dependencies.py  error_handler.py  file_manager_api.py  heavy_api.py  index  index.py  light_api.py  logging_setup.py  main.py  ml_analysis_api.py  ml_models.py  research_api.py  security.py  simple_router.py  static_files.py  test_integrations.py  vercel_app.py  vercel_main.py
app/: __init__.py
configs/: cosmology_sample.yml  desi_sample.yml
database/: config.py  schema.sql
deploy/: azure-amd64.sh  (+16 more)
(+173 files in other folders)
