[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-api"
version = "0.1.0"
description = "Scientific API ingestion, graph corpus, and ML pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "pyarrow",
  "pyyaml",
  "httpx",
  "astropy",
  "tqdm",
  "networkx",
  "pydantic>=2",
  "pydantic-settings>=2",
]

[tool.setuptools.packages.find]
include = ["scientific_api*", "app*", "ml*"]